# Mail_Bot

./: .gitignore  README.md  app.py  pyproject.toml  questions.txt
.chainlit/: config.toml
mail_bot/: prompts.py
