[tool.poetry]
name = "mail-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mail_bot"}]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
langchain = "^0.2.7"
ipykernel = "^6.25.2"
langchain-google-genai = "^1.0.7"
pydantic-core = "^2.20.1"
langchain-community = "^0.2.7"
faiss-cpu = "^1.7.4"
python-dotenv = "^1.0.1"
chainlit = "^0.7.604"
annotated-types = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
